feat(java): drop --enable-preview and prepare 0.6.0-jdk25 packaging
- remove --enable-preview from compiler args, surefire, javadoc, and JMH
  forks: no preview feature is used (class files already carried no
  preview bit), so artifacts run on plain JDK 25/26 with
  --add-modules=jdk.incubator.vector; replace --add-modules=ALL-SYSTEM
  with the explicit incubator module
- logback-classic -> test scope (library no longer forces a backend)
- Automatic-Module-Name for libfindchars-api and libfindchars-compiler
- javasmt-solver-z3 version extracted to a parent property (CI reads it)
- examples: real package org.knownhosts.libfindchars.examples, public
  classes, runnable via exec-maven-plugin
- fix @Deprecated(since) on compiled(boolean) to 0.6.0; api pom <name>
  matches artifactId; drop orphan java/src test resource